-------------------------- soilDB 0.8-2 (2012-08-23) ----------------------------
* compatible with NASIS 6.2
* bug fixes
* taxhistory selection method is preserved in the results
* 'taxonname' is used instead of 'sampled_as' / 'correlated_as'
! needs further testing

-------------------------- soilDB 0.8 (2012-08-20) ----------------------------
* updating for PedonPC 5.0 and NASIS 6.2
  - site data contains the best-guessed corresponding row from the taxhistory table, based on:
		1) most recent record, or 2) record with the least amount of missing data
  - taxhistory data are now included in the output from get_extended_data_from_pedon_db()
* package is now partially compatible with NASIS 6.2

-------------------------- soilDB 0.6 (2012-06-19) ----------------------------
* tidying up documentation, package dependencies, and NAMESPACE

-------------------------- soilDB 0.5-6 (2012-04-16) ----------------------------
* adding preimlinary functions for querying component data from local NASIS
* fixed minor bug in SDA_query() and added some links to related documentation

-------------------------- soilDB 0.5-1 (2012-02-22) ----------------------------
* fetchNASIS() and fetchPedonPC() now integrate `extended' data
* warning and error messages cleaned-up
* multiple textures no longer cause duplicate HZ rows (NASIS only)
* exteded queries now split frags/para-frags
* silt fraction is estimated from 100-(sand+clay) when possible
* added local NASIS ODBC connection vignette (thanks JMS)
* removed dsn argument from NASIS functions as it should always be 'nasis_local'
* new wide-formatted, boolean representation of diagnostic horizon data
* queries standardized between NASIS/PedonPC
* new fetchNASIS() function for 1-line access to local NASIS data
* new sample data set 'loafercreek'
* basic vignette added, switching to knitr-style vignettes

-------------------------- soilDB 0.3-3 (2012-01-10) --------------------------